--- a/privacy.html
+++ b/privacy.html
@@ -23,7 +23,7 @@
     <p>Vos données sont stockées de manière sécurisée et uniquement utilisées pour publier vos vidéos.</p>
 
     <h2>Contact</h2>
-    <p>Pour toute question, contactez : support@tonsite.com</p>
+    <p>Pour toute question, contactez : raphael.pro022@gmail.com</p>
   </main>
 
   <footer>
