--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>Automatisez vos vidéos TikTok en toute simplicité</h2>
     <p>Connectez votre compte TikTok pour tester notre outil.</p>
     <a class="btn" 
-       href="https://www.tiktok.com/auth/authorize?client_key=TON_CLIENT_KEY&scope=user.info.basic,video.upload&response_type=code&redirect_uri=TON_REDIRECT_URI">
+       href="https://www.tiktok.com/auth/authorize?client_key=awomw7qskmszqiba&scope=user.info.basic,video.upload&response_type=code&redirect_uri=https://raphaelpro022.github.io/tiktok-site/index.html">
        🚀 Se connecter avec TikTok
     </a>
   </main>
