--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
   <main>
     <h2>Automatisez vos vidéos TikTok en toute simplicité</h2>
     <p>Connectez votre compte TikTok pour tester notre outil.</p>
+    
+    <!-- Bouton connexion avec scopes -->
     <a class="btn" 
-       href="https://www.tiktok.com/auth/authorize?client_key=awomw7qskmszqiba&scope=user.info.basic,video.upload&response_type=code&redirect_uri=https://raphaelpro022.github.io/tiktok-site/callback.html">
+       href="https://www.tiktok.com/v2/auth/authorize/?client_key=awomw7qskmszqiba
+       &scope=user.info.basic,video.upload
+       &response_type=code
+       &redirect_uri=https://raphaelpro022.github.io/tiktok-site/callback.html
+       &state=xyz123">
        🚀 Se connecter avec TikTok
     </a>
   </main>
