--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <p>Connectez votre compte TikTok pour tester notre outil.</p>
     
     <!-- Bouton connexion avec scopes -->
-    <a class="btn" 
-       href="https://www.tiktok.com/v2/auth/authorize/?client_key=sbawyevz981byo72o7
-       &scope=user.info.basic,video.upload
-       &response_type=code
-       &redirect_uri=https://raphaelpro022.github.io/tiktok-site/callback.html
-       &state=xyz123">
-       🚀 Se connecter avec TikTok
-    </a>
+   <a href="https://www.tiktok.com/v2/auth/authorize/
+?client_key=sbawyevz981byo72o7
+&scope=user.info.basic
+&response_type=code
+&redirect_uri=https://raphaelpro022.github.io/tiktok-site/callback.html
+&state=12345">
+   🚀 Se connecter avec TikTok
+</a>
   </main>
 
   <footer>
