--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 &scope=user.info.basic
 &response_type=code
 &redirect_uri=https://raphaelpro022.github.io/tiktok-site/callback.html
-&state=12345">
+&scope=user.info.basic">
    🚀 Se connecter avec TikTok
 </a>
   </main>
