--- a/index.html
+++ b/index.html
@@ -18,16 +18,10 @@
   <main>
     <h2>Automatisez vos vidéos TikTok en toute simplicité</h2>
     <p>Connectez votre compte TikTok pour tester notre outil.</p>
-    
-    <!-- Bouton connexion avec scopes -->
-   <a href="https://www.tiktok.com/v2/auth/authorize/
-?client_key=sbawyevz981byo72o7
-&scope=user.info.basic
-&response_type=code
-&redirect_uri=https://raphaelpro022.github.io/tiktok-site/callback.html
-&scope=user.info.basic">
-   🚀 Se connecter avec TikTok
-</a>
+    <a class="btn" 
+       href="https://www.tiktok.com/auth/authorize?client_key=sbawyevz981byo72o7&scope=user.info.basic,video.upload&response_type=code&redirect_uri=https://raphaelpro022.github.io/tiktok-site/callback.html&scope=user.info.basic">
+       🚀 Se connecter avec TikTok
+    </a>
   </main>
 
   <footer>
