--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>Automatisez vos vidéos TikTok en toute simplicité</h2>
     <p>Connectez votre compte TikTok pour tester notre outil.</p>
     <a class="btn" 
-   href="https://www.tiktok.com/auth/authorize?client_key=sbawyevz981byo72o7&scope=user.info.basic,video.upload&response_type=code&redirect_uri=https%3A%2F%2Fraphaelpro022.github.io%2Ftiktok-site%2Fcallback.html">
+   href="https://www.tiktok.com/auth/authorize?client_key=sbawyevz981byo72o7&scope=user.info.basic,user.info.stats,video.upload&response_type=code&redirect_uri=https%3A%2F%2Fraphaelpro022.github.io%2Ftiktok-site%2Fcallback.html">
    🚀 Se connecter avec TikTok
 </a>
   </main>
