--- a/callback.html
+++ b/callback.html
@@ -2,49 +2,89 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>TikTok Callback</title>
+  <title>Connexion TikTok</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      color: #333;
+      text-align: center;
+      padding: 50px;
+    }
+    h2 {
+      color: #010101;
+    }
+    pre {
+      background: #fff;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 15px;
+      max-width: 600px;
+      margin: 20px auto;
+      text-align: left;
+      overflow-x: auto;
+      white-space: pre-wrap;
+      word-break: break-word;
+    }
+    .loading { color: #555; }
+    .error { color: red; }
+    .success { color: green; }
+  </style>
 </head>
 <body>
   <h2>Connexion TikTok en cours...</h2>
-  <pre id="result">Chargement...</pre>
+  <pre id="result" class="loading">Chargement...</pre>
 
   <script>
-    // 🔎 Récupère les paramètres de l'URL (ex: ?code=xxxxx)
-    const params = new URLSearchParams(window.location.search);
-    const code = params.get("code");
-    const error = params.get("error");
+    (async () => {
+      const resultEl = document.getElementById("result");
 
-    if (error) {
-      document.getElementById("result").textContent = "❌ Erreur TikTok : " + error;
-    } else if (!code) {
-      document.getElementById("result").textContent = "⚠️ Aucun code reçu dans l’URL.";
-    } else {
-      document.getElementById("result").textContent =
-        "Code d'autorisation reçu : " + code + "\n\n⏳ Envoi au serveur...";
+      // Récupère les paramètres de l’URL
+      const params = new URLSearchParams(window.location.search);
+      const code = params.get("code");
+      const error = params.get("error");
+      const state = params.get("state");
 
-      // 🔹 Envoi du code à ton backend Vercel
-      fetch("https://tiktok-bot-api.vercel.app/api/exchange", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ code })
-      })
-      .then(res => res.json())
-      .then(data => {
-        document.getElementById("result").textContent =
-          "✅ Réponse du serveur TikTok :\n\n" + JSON.stringify(data, null, 2);
+      if (error) {
+        resultEl.textContent = "❌ Erreur TikTok : " + error;
+        resultEl.className = "error";
+        return;
+      }
 
-        // 💡 Optionnel : affiche access_token / open_id si présents
-        if (data.access_token) {
-          document.getElementById("result").textContent +=
-            "\n\n🔑 Access Token : " + data.access_token +
-            "\n👤 Open ID : " + data.open_id;
+      if (!code) {
+        resultEl.textContent = "⚠️ Aucun code reçu dans l’URL.";
+        resultEl.className = "error";
+        return;
+      }
+
+      resultEl.textContent = "✅ Code d’autorisation reçu : " + code + "\n\n⏳ Envoi au serveur...";
+
+      try {
+        // Appelle ton backend pour échanger le code contre un access_token
+        const response = await fetch("https://tiktok-bot-api.vercel.app/api/exchange", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ code, state })
+        });
+
+        const data = await response.json();
+
+        if (response.ok) {
+          resultEl.textContent =
+            "🎉 Connexion réussie !\n\n" +
+            JSON.stringify(data, null, 2);
+          resultEl.className = "success";
+        } else {
+          resultEl.textContent =
+            "❌ Erreur serveur TikTok :\n\n" +
+            JSON.stringify(data, null, 2);
+          resultEl.className = "error";
         }
-      })
-      .catch(err => {
-        document.getElementById("result").textContent =
-          "❌ Erreur lors de la requête : " + err.message;
-      });
-    }
+      } catch (err) {
+        resultEl.textContent = "❌ Erreur lors de la requête : " + err.message;
+        resultEl.className = "error";
+      }
+    })();
   </script>
 </body>
 </html>
