--- a/index.html
+++ b/index.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TikTok Bot - Connexion</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    header, footer {
+      background: #111;
+      color: #fff;
+      padding: 15px 20px;
+      text-align: center;
+    }
+    nav a {
+      color: #fff;
+      margin: 0 10px;
+      text-decoration: none;
+    }
+    main {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 30px;
+    }
+    h1 {
+      margin: 0;
+    }
+    h2 {
+      margin: 15px 0;
+      color: #333;
+    }
+    p {
+      max-width: 500px;
+      color: #666;
+    }
+    .btn-tiktok {
+      background: #000;
+      color: #fff;
+      font-size: 18px;
+      padding: 12px 25px;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: background 0.3s ease;
+    }
+    .btn-tiktok:hover {
+      background: #ff0050;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -17,18 +72,25 @@
 
   <main>
     <h2>Automatisez vos vidéos TikTok en toute simplicité</h2>
-    <p>Connectez votre compte TikTok pour tester notre outil.</p>
-
-    <!-- 🚀 Bouton de connexion avec TikTok -->
-   <a href="https://www.tiktok.com/v2/auth/authorize/?client_key=sbawyevz981byo72o7&scope=user.info.basic,user.info.stats,video.upload&response_type=code&redirect_uri=https%3A%2F%2Fraphaelpro022.github.io%2Ftiktok-site%2Fcallback.html&state=st12345">
-  <button>Se connecter avec TikTok</button>
-</a>
-       🚀 Se connecter avec TikTok
-    </a>
+    <p>Connectez votre compte TikTok pour tester notre outil d'automatisation.</p>
+    <button class="btn-tiktok" onclick="connectTikTok()">🚀 Se connecter avec TikTok</button>
   </main>
 
   <footer>
     <p>© 2025 TikTok Bot - Tous droits réservés</p>
   </footer>
+
+  <script>
+    function connectTikTok() {
+      const clientKey = "sbawyevz981byo72o7";
+      const redirectUri = encodeURIComponent("https://raphaelpro022.github.io/tiktok-site/callback.html");
+      const scopes = ["user.info.basic", "user.info.stats", "video.upload"].join(",");
+      const state = "st" + Date.now(); // Anti-CSRF basique
+
+      const url = `https://www.tiktok.com/v2/auth/authorize/?client_key=${clientKey}&scope=${scopes}&response_type=code&redirect_uri=${redirectUri}&state=${state}`;
+
+      window.location.href = url;
+    }
+  </script>
 </body>
 </html>
