--- a/callback.html
+++ b/callback.html
@@ -2,44 +2,28 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Connexion TikTok</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      color: #333;
-      text-align: center;
-      padding: 50px;
-    }
-    h2 {
-      color: #010101;
-    }
-    pre {
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 15px;
-      max-width: 600px;
-      margin: 20px auto;
-      text-align: left;
-      overflow-x: auto;
-      white-space: pre-wrap;
-      word-break: break-word;
-    }
-    .loading { color: #555; }
-    .error { color: red; }
-    .success { color: green; }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Connexion TikTok en cours...</h2>
-  <pre id="result" class="loading">Chargement...</pre>
+  <header>
+    <h1>TikTok Bot</h1>
+  </header>
+
+  <main>
+    <h2>Connexion TikTok en cours...</h2>
+    <p>Nous traitons vos informations pour récupérer votre code d'autorisation.</p>
+    <pre id="result" class="loading">Chargement...</pre>
+  </main>
+
+  <footer>
+    <p>© 2025 TikTok Bot - Tous droits réservés</p>
+  </footer>
 
   <script>
     (async () => {
       const resultEl = document.getElementById("result");
-
-      // Récupère les paramètres de l’URL
       const params = new URLSearchParams(window.location.search);
       const code = params.get("code");
       const error = params.get("error");
@@ -57,10 +41,9 @@
         return;
       }
 
-      resultEl.textContent = "✅ Code d’autorisation reçu : " + code + "\n\n⏳ Envoi au serveur...";
+      resultEl.textContent = "✅ Code reçu : " + code + "\n\n⏳ Envoi au serveur...";
 
       try {
-        // Appelle ton backend pour échanger le code contre un access_token
         const response = await fetch("https://tiktok-bot-api.vercel.app/api/exchange", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
@@ -68,16 +51,11 @@
         });
 
         const data = await response.json();
-
         if (response.ok) {
-          resultEl.textContent =
-            "🎉 Connexion réussie !\n\n" +
-            JSON.stringify(data, null, 2);
+          resultEl.textContent = "🎉 Connexion réussie !\n\n" + JSON.stringify(data, null, 2);
           resultEl.className = "success";
         } else {
-          resultEl.textContent =
-            "❌ Erreur serveur TikTok :\n\n" +
-            JSON.stringify(data, null, 2);
+          resultEl.textContent = "❌ Erreur serveur TikTok :\n\n" + JSON.stringify(data, null, 2);
           resultEl.className = "error";
         }
       } catch (err) {
