--- a/privacy.html
+++ b/privacy.html
@@ -8,26 +8,21 @@
 </head>
 <body>
   <header>
-    <h1>Politique de confidentialité</h1>
-    <nav>
-      <a href="index.html">Accueil</a>
-      <a href="terms.html">Conditions</a>
-    </nav>
+    <h1>TikTok Bot</h1>
   </header>
 
   <main>
-    <h2>Données collectées</h2>
-    <p>Nous collectons uniquement les informations nécessaires à l’authentification TikTok.</p>
-
-    <h2>Stockage</h2>
-    <p>Vos données sont stockées de manière sécurisée et uniquement utilisées pour publier vos vidéos.</p>
-
-    <h2>Contact</h2>
-    <p>Pour toute question, contactez : raphael.pro022@gmail.com</p>
+    <h2>Politique de confidentialité</h2>
+    <p>Nous respectons votre vie privée et nous nous engageons à protéger vos informations personnelles.</p>
+    <ul>
+      <li>Vos données TikTok ne seront utilisées que pour l’authentification et l’automatisation de vidéos.</li>
+      <li>Aucune donnée personnelle ne sera partagée avec des tiers non autorisés.</li>
+      <li>Vous pouvez demander la suppression de vos données à tout moment en nous contactant.</li>
+    </ul>
   </main>
 
   <footer>
-    <p>© 2025 TikTok Bot</p>
+    <p>© 2025 TikTok Bot - Tous droits réservés</p>
   </footer>
 </body>
 </html>
