--- a/terms.html
+++ b/terms.html
@@ -3,31 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conditions d’utilisation</title>
+  <title>Conditions générales</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Conditions d’utilisation</h1>
-    <nav>
-      <a href="index.html">Accueil</a>
-      <a href="privacy.html">Politique</a>
-    </nav>
+    <h1>TikTok Bot</h1>
   </header>
 
   <main>
-    <h2>1. Utilisation</h2>
-    <p>Notre service est destiné à automatiser la publication de vidéos sur TikTok avec votre consentement.</p>
-
-    <h2>2. Responsabilités</h2>
-    <p>Nous ne sommes pas responsables d’un usage abusif du service.</p>
-
-    <h2>3. Données</h2>
-    <p>Nous respectons vos données et ne les partageons pas.</p>
+    <h2>Conditions générales d'utilisation</h2>
+    <p>En utilisant TikTok Bot, vous acceptez les conditions suivantes :</p>
+    <ul>
+      <li>L’utilisation du bot est à vos propres risques et responsabilités.</li>
+      <li>Vous vous engagez à ne pas enfreindre les règles de TikTok.</li>
+      <li>L’équipe de TikTok Bot ne pourra être tenue responsable de pertes ou de blocages liés à l’usage de votre compte.</li>
+      <li>Tout usage abusif ou frauduleux peut entraîner la suspension de votre accès au service.</li>
+    </ul>
   </main>
 
   <footer>
-    <p>© 2025 TikTok Bot</p>
+    <p>© 2025 TikTok Bot - Tous droits réservés</p>
   </footer>
 </body>
 </html>
