--- a/callback.html
+++ b/callback.html
@@ -3,66 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Connexion TikTok</title>
-  <link rel="stylesheet" href="style.css">
+  <title>TikTok Callback</title>
+  <style>
+    body { font-family: Arial, sans-serif; padding: 2rem; background: #f5f5f5; color: #333; }
+    h2 { color: #00f2ea; }
+    pre { background: #222; color: #0f0; padding: 1rem; border-radius: 8px; overflow-x: auto; }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>TikTok Bot</h1>
-  </header>
-
-  <main>
-    <h2>Connexion TikTok en cours...</h2>
-    <p>Nous traitons vos informations pour récupérer votre code d'autorisation.</p>
-    <pre id="result" class="loading">Chargement...</pre>
-  </main>
-
-  <footer>
-    <p>© 2025 TikTok Bot - Tous droits réservés</p>
-  </footer>
+  <h2>Connexion TikTok en cours...</h2>
+  <pre id="result">Chargement...</pre>
 
   <script>
-    (async () => {
-      const resultEl = document.getElementById("result");
+    async function exchangeCode() {
       const params = new URLSearchParams(window.location.search);
       const code = params.get("code");
       const error = params.get("error");
-      const state = params.get("state");
+
+      const resultEl = document.getElementById("result");
 
       if (error) {
         resultEl.textContent = "❌ Erreur TikTok : " + error;
-        resultEl.className = "error";
         return;
       }
 
       if (!code) {
         resultEl.textContent = "⚠️ Aucun code reçu dans l’URL.";
-        resultEl.className = "error";
         return;
       }
 
-      resultEl.textContent = "✅ Code reçu : " + code + "\n\n⏳ Envoi au serveur...";
+      resultEl.textContent = "🔹 Code reçu, échange en cours...";
 
       try {
-        const response = await fetch("https://tiktok-bot-api.vercel.app/api/exchange", {
+        const res = await fetch("https://tiktok-bot-api.vercel.app/api/exchange", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ code, state })
+          body: JSON.stringify({ code })
         });
 
-        const data = await response.json();
-        if (response.ok) {
-          resultEl.textContent = "🎉 Connexion réussie !\n\n" + JSON.stringify(data, null, 2);
-          resultEl.className = "success";
+        const data = await res.json();
+
+        if (!res.ok) {
+          resultEl.textContent = "❌ Erreur serveur :\n" + JSON.stringify(data, null, 2);
         } else {
-          resultEl.textContent = "❌ Erreur serveur TikTok :\n\n" + JSON.stringify(data, null, 2);
-          resultEl.className = "error";
+          resultEl.textContent = "✅ Token reçu avec succès :\n" + JSON.stringify(data, null, 2);
         }
+
       } catch (err) {
         resultEl.textContent = "❌ Erreur lors de la requête : " + err.message;
-        resultEl.className = "error";
       }
-    })();
+    }
+
+    exchangeCode();
   </script>
 </body>
 </html>
