--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <script>
     document.getElementById("loginBtn").addEventListener("click", () => {
       // 🔑 Remplace avec TES infos TikTok Developer
-      const CLIENT_KEY = "TON_CLIENT_KEY"; 
+      const CLIENT_KEY = "sbawyevz981byo72o7"; 
       const REDIRECT_URI = encodeURIComponent("https://raphaelpro022.github.io/tiktok-site/callback.html");
       const STATE = "st" + Date.now(); // Génère un état unique pour sécurité
       const SCOPES = encodeURIComponent("user.info.basic,user.info.stats,video.upload");
