--- a/callback.html
+++ b/callback.html
@@ -5,57 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TikTok Callback</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      color: #333;
-      margin: 0;
-      padding: 2rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    h2 {
-      color: #00f2ea;
-      margin-bottom: 1rem;
-    }
-    pre {
-      background: #1e1e1e;
-      color: #0f0;
-      padding: 1rem;
-      border-radius: 8px;
-      max-width: 800px;
-      width: 100%;
-      white-space: pre-wrap;
-      word-wrap: break-word;
-      overflow-x: auto;
-    }
-    .loading { color: orange; }
-    .error { color: red; }
-    .success { color: lime; }
+    body { font-family: Arial, sans-serif; padding: 2rem; background: #f5f5f5; color: #333; }
+    h2 { color: #00f2ea; }
+    pre { background: #222; color: #0f0; padding: 1rem; border-radius: 8px; overflow-x: auto; }
   </style>
 </head>
 <body>
   <h2>Connexion TikTok en cours...</h2>
-  <pre id="result" class="loading">Chargement...</pre>
+  <pre id="result">Chargement...</pre>
 
   <script>
     async function exchangeCode() {
       const params = new URLSearchParams(window.location.search);
       const code = params.get("code");
       const error = params.get("error");
-
       const resultEl = document.getElementById("result");
 
       if (error) {
         resultEl.textContent = "❌ Erreur TikTok : " + error;
-        resultEl.className = "error";
         return;
       }
-
       if (!code) {
         resultEl.textContent = "⚠️ Aucun code reçu dans l’URL.";
-        resultEl.className = "error";
         return;
       }
 
@@ -72,15 +43,12 @@
 
         if (!res.ok) {
           resultEl.textContent = "❌ Erreur serveur :\n" + JSON.stringify(data, null, 2);
-          resultEl.className = "error";
         } else {
           resultEl.textContent = "✅ Token reçu avec succès :\n" + JSON.stringify(data, null, 2);
-          resultEl.className = "success";
         }
 
       } catch (err) {
         resultEl.textContent = "❌ Erreur lors de la requête : " + err.message;
-        resultEl.className = "error";
       }
     }
 
